CES prep: docs, READMEs, Contract Reviewer fix, real-time inference metrics
- Fixed Contract Reviewer PDF upload 'document closed' bug
- Added /api/export endpoint for Contract Reviewer
- Updated READMEs for hub-ui-v2, abs_workstation_console, core, apps
- Removed old hub-ui directory (replaced by hub-ui-v2)
- Created CES documentation suite:
  - CES_SETUP_GUIDE.md
  - ABS_AI_FABRIC_OVERVIEW.md
  - WORKSTATION_CONSOLE_OVERVIEW.md
  - CES_STAFF_DEMO_GUIDE.md
  - CES_TERMINOLOGY_GUIDE.md
- Implemented real-time inference metrics (tokens/sec, TTFT, latency)
- Added InferenceMetrics interface and sendChatCompletionWithMetrics API

--- a/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contract Reviewer v2 - Professional AI Contract Analysis</title>
+    <title>Contract Reviewer - Professional AI Contract Analysis</title>
     <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
     <script src="https://unpkg.com/alpinejs@3.13.3/dist/cdn.min.js" defer></script>
@@ -22,7 +22,7 @@
 
 <body class="bg-gray-50 font-sans" x-data="contractReviewer" x-init="init()">
     <!-- ABS Unified Header (Web Component) -->
-    <abs-unified-header app-id="contract-reviewer-v2" app-name="Contract Reviewer v2" app-icon="⚖️"
+    <abs-unified-header app-id="contract-reviewer-v2" app-name="Contract Reviewer" app-icon="⚖️"
         hub-url="http://localhost:5173" gateway-url="http://localhost:8081" settings-url="/settings">
     </abs-unified-header>
     <script type="module" src="http://localhost:5173/abs-header.js"></script>
