--- a/abs-ai-hub/apps/contract-reviewer-v2/static/settings.html
+++ b/abs-ai-hub/apps/contract-reviewer-v2/static/settings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operations Console - Contract Reviewer v2</title>
+    <title>Operations Console - Contract Reviewer</title>
     <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
     <script src="https://unpkg.com/alpinejs@3.13.3/dist/cdn.min.js" defer></script>
@@ -20,7 +20,7 @@
 
 <body class="bg-gray-50 font-sans" x-data="operationsConsole" x-init="init()" x-cloak>
     <!-- ABS Unified Header (Web Component) -->
-    <abs-unified-header app-id="contract-reviewer-v2" app-name="Contract Reviewer v2" app-icon="⚖️"
+    <abs-unified-header app-id="contract-reviewer-v2" app-name="Contract Reviewer" app-icon="⚖️"
         hub-url="http://localhost:5173" gateway-url="http://localhost:8081" settings-url="/settings">
     </abs-unified-header>
     <script type="module" src="http://localhost:5173/abs-header.js"></script>
@@ -34,7 +34,7 @@
                 <h1 class="text-xl font-bold text-gray-900">
                     <i class="fas fa-cogs mr-2 text-blue-600"></i>Operations Console
                 </h1>
-                <p class="text-sm text-gray-500 mt-1">Contract Reviewer v2</p>
+                <p class="text-sm text-gray-500 mt-1">Contract Reviewer</p>
             </div>
 
             <!-- Navigation -->
